--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="nav_links">
             <li><a href="#">Home</a></li>
             <li><a href="src/about.html">About</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="src/services.html">Services</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -30,7 +30,7 @@
                 <h1>Here to <span>Help</span> you <span>With</span> your <span>Tech ...</span></h1>                
             </div>
             <div class="hero_image">
-                <img src="assets/Images/maintanance and repairs.jpeg" alt="Server with Cables" />
+                <img src="assets/Images/data_center.jpg" alt="Server with Cables" />
             </div>
         </section>
 
