services page updates

--- a/src/services.html
+++ b/src/services.html
@@ -63,7 +63,7 @@
 
             <div class="service">
                 <h1>Data Center</h1>
-                <img src="../assets/Images/DATA CENTER.jpg" alt="Data Center">
+                <img src="../assets/Images/data_center.jpg" alt="Data Center">
                 <div class="description">
                     <h2>Computer Room Cleaning</h2>
                     <p>Cleaning and dust removal in a data centre, computer room, server room or comms room is vital to the reliable operation of equipment containing mission-critical data. After construction and major installations or upgrades, a detailed cleaning is essential. Annual sub-floor and regularly scheduled above-floor services keep the room free from harmful dust and contaminants that can infiltrate equipment, cause overheating and decrease operating life.Whether your data center or computer room is just a closet or a mega-center, it needs to be cleaned to maintain the health of the equipment, the health of the personnel and the environmental aesthetics. Our technicians perform three basic services separately, or in combinations, that are designed to keep you computer room running at peak performance. These three services are: Exterior Hardware Cleaning, Tops of Floor Cleaning, and Underfloor Plenum Cleaning. Combinations of these services are usually performed at scheduled intervals, ranging from once per year, Quarterly to once a day. These same services and variations are performed in response to floods, or other disasters, or to prepare for equipment installation after construction.</p>
