included the about section images for the home section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- <meta http-equiv="refresh" content="1"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/Styles/navbar.css">
@@ -34,11 +35,20 @@
             </div>
         </section>
 
-        <section class="Home_about">
+        <section class="Home_about">            
             <div class="container about_text">
                 <p>Our IT solutions help organisations achieve efficiency through secure platforms and strategic technology decisions.</p>
                 <p>We strive to provide the best level of service, support and care that is possible in the IT industry.ICT INFRASTRUCTURE SOLUTIONS LIMITED service agreements are no lock in - a reflection of the fact that we know you will love our level of service and price point.</p>
                 <p>We specialise in Cloud platforms Microsoft 365, Google, AWS, Zoho. Backup & Disaster Recovery, Microsoft Exchange Online, Microsoft Azure, Dedicated Private Cloud services, hardware and software supplies and installations, Server Monitoring, CCTV Surveillance, Conference System, Access Control, Data Centre, Network LAN/WAN cabling, Optical Fiber and IT Consulting.</p>
+            </div>
+            <div class="about_images">
+                <ul>
+                    <li><img src="assets/Images/Logitech.png" alt="Logitech"></li>
+                    <li><img src="assets/Images/Hiki vision.png" alt="Hikivision"></li>
+                    <li><img src="assets/Images/Home_ms.jpg" alt="Home MS Services"></li>
+                    <li><img src="assets/Images/zoho.jpg" alt="Zoho"></li>
+                    <li><img src="assets/Images/Homepage_cloud.jpg" alt="Homepage Cloud"></li>
+                </ul>
             </div>
         </section>
 
