home page updates

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- <meta http-equiv="refresh" content="1"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/Styles/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/Styles/icomoon.css">
     <link rel="stylesheet" href="assets/Styles/navbar.css">
     <link rel="stylesheet" href="assets/Styles/styles.css">    
     <title>Home</title>
@@ -42,7 +44,7 @@
                 <p>We specialise in Cloud platforms Microsoft 365, Google, AWS, Zoho. Backup & Disaster Recovery, Microsoft Exchange Online, Microsoft Azure, Dedicated Private Cloud services, hardware and software supplies and installations, Server Monitoring, CCTV Surveillance, Conference System, Access Control, Data Centre, Network LAN/WAN cabling, Optical Fiber and IT Consulting.</p>
             </div>
             <div class="about_images">
-                <ul>
+                <ul class="list-unstyled">
                     <li><img src="assets/Images/Logitech.png" alt="Logitech"></li>
                     <li><img src="assets/Images/Hiki vision.png" alt="Hikivision"></li>
                     <li><img src="assets/Images/Home_ms.jpg" alt="Home MS Services"></li>
@@ -53,7 +55,28 @@
         </section>
 
         <section class="Footer">
-            <p>All right reserved &copy; 2022. ICT Infrastructure Solutions.</p>
+            <div class="footer_details container">
+                <div class="footer_wrapper">
+                    <h1>Contacts</h1>
+                    <div class="info">
+                        <p><span class="icon icon-map-marker"</span> P.O BOX 31018 - 0060.</p>                
+                        <p><span class="icon icon-map-marker"</span> Nairobi, Kenya.</p>
+                        <p><span class="icon icon-phone"></span> Tel: 0720 987 281</p>
+                        <p><span class="icon icon-envelope"></span> info@ictinfrastructure.co.ke</p>
+                    </div>                
+                </div>
+                <div class="footer_wrapper">
+                    <h1>Links</h1>
+                    <div class="info">
+                        <p><a href="src/about.html">About</a></p>
+                        <p><a href="src/services.html">Services</a></p>
+                    </div>
+                </div>
+                <!-- <div class="footer_wrapper logo">
+                    <p>&copy; 2022. ICT Infrastructure Solutions.</p>
+                </div> -->
+            </div>
+            <p class="footer_p">All right reserved &copy; 2022. ICT Infrastructure Solutions.</p>
         </section>
     </main>
 
