--- a/src/about.html
+++ b/src/about.html
@@ -27,26 +27,28 @@
         </div>
     </nav>
     <main>
-        <div class="About">
-            <div class="about_text container">
-                <h1 class="section_heading">About Us</h1>
-                <p>Having smooth-running and secure information technology and telecommunication (IT&T) systems can provide a strong competitive advantage and help your business be successful. </p>
-                <p>Awork environment based on reliable technology infrastructure has a direct effect on profitability and customer service by promoting productivity, communications and effectiveness. That is why we help you address these challenges and come out ahead of yourcompetitor.</p>
-                <p>To us, technology is not a product; it is a service that helps our customers capitalize on thetop tools to ensure productivity...reliability...and peace of mind in today’s work environment.Since its inception in November 2010, ICT Infrastructure Solutions LTD (ICTISL) has been driven by a goal to help customers work smarter. How? By creating a managed IT environment where leading technology resources and proactive management are availableand affordable for all organizations.</p>
-            </div>
-            <div class="about_image container">
-                <img src="../assets/Images/Google map.jpeg" alt="Map Location">
-                <div class="address">
-                    <p><span class="icon icon-map-marker"</span> P.O BOX 31018 - 0060.</p>
-                    <p><span class="icon icon-map-marker"</span> South-B Golden Gate, Kapiti rd, Along Mombasa Road.</p>
-                    <p><span class="icon icon-map-marker"</span> Nairobi, Kenya.</p>
+        <section class="container">
+            <h1 class="section_heading">About Us</h1>
+            <div class="About">
+                <div class="about_text container">                
+                    <p>Having smooth-running and secure information technology and telecommunication (IT&T) systems can provide a strong competitive advantage and help your business be successful. </p>
+                    <p>Awork environment based on reliable technology infrastructure has a direct effect on profitability and customer service by promoting productivity, communications and effectiveness. That is why we help you address these challenges and come out ahead of yourcompetitor.</p>
+                    <p>To us, technology is not a product; it is a service that helps our customers capitalize on thetop tools to ensure productivity...reliability...and peace of mind in today’s work environment.Since its inception in November 2010, ICT Infrastructure Solutions LTD (ICTISL) has been driven by a goal to help customers work smarter. How? By creating a managed IT environment where leading technology resources and proactive management are availableand affordable for all organizations.</p>
                 </div>
-                <div class="contacts">
-                    <p><span class="icon icon-phone"></span> Tel: 0720 987 281</p>
-                    <p><span class="icon icon-envelope"></span> info@ictinfrastructure.co.ke</p>
+                <div class="about_image container">
+                    <img src="../assets/Images/Google map.jpeg" alt="Map Location">
+                    <div class="address">
+                        <p><span class="icon icon-map-marker"</span> P.O BOX 31018 - 0060.</p>
+                        <p><span class="icon icon-map-marker"</span> South-B Golden Gate, Kapiti rd, Along Mombasa Road.</p>
+                        <p><span class="icon icon-map-marker"</span> Nairobi, Kenya.</p>
+                    </div>
+                    <div class="contacts">
+                        <p><span class="icon icon-phone"></span> Tel: 0720 987 281</p>
+                        <p><span class="icon icon-envelope"></span> info@ictinfrastructure.co.ke</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
 
     <script src="../assets/JavaScript/nav.js"></script>
