service page updates

--- a/src/services.html
+++ b/src/services.html
@@ -27,12 +27,12 @@
         </div>
     </nav>
     <main>
-        <div class="Services container">
-            <h1 class="section_heading">Our Services</h1>
+        <h1 class="section_heading">Our Services</h1>
+        <section class="Services container">            
             <div class="service">
                 <h1>ICT Support & Cloud Services</h1>
                 <img src="../assets/Images/cloud services.jpg" alt="Cloud Services">
-                <div class="description">
+                <div class="description">                    
                     <p>Tired of organising multiple suppliers and support contacts, and constantly organising or chasing various third parties? Whether you require a Proactive Maintenance Plan, or a Fixed-price Service Agreement to assist with budgeting, Our IT Support will customise a support contract to meet your needs.We offer a very wide range of support plans to suit every business type and size.Our plans can be signed up on an as-needed basis, or a month to month agreement, or for the best value on a term agreement. With no lock-in contracts required, you can have certainty, as well as no financial surprises.ASIT's managed IT support will typically include routine maintenance on your servers to ensure they are running at their best, cleaning of temporary or potentially malicious files, update software, in particular where the update may include security patches, hardware upgrades for aging items, and maintaining your precious backups.Since we have been in the business of managed IT support for decades we really know how to get all of this done fast and efficiently, but getting the result.We can come to you if you have on-site hardware or servers, or perform maintenance in the cloud for cloud-based servers and back up solutions</p>
                 </div>
             </div>
@@ -76,25 +76,25 @@
 
                     <h2>Underfloor Plenum Cleaning</h2>                    
                     <p>The lifeline of any computer room is the plenum beneath its raised flooring. This plenum delivers cool, filtered air to the sensitive equipment above. Unfortunately, because of gravity, the plenum is also the area most prone to dirt and dust. Allowed to accumulate, these contaminants will be swept up and carried to your equipment by the circulating air conditioning so vital to your equipment's operation. The impact of contaminated airflow includes clogged circuitry, increased risk of fire, accidental fire suppressant discharge, and miscellaneous health problems.Underfloor cleaning service helps protect your equipment from these and other hazards. Our cleaning also satisfies many insurance audits, and may help reduce the cost of insurance.</p>
-                </div>
+                </div>                                
+            </div>
 
-                <div class="service">
-                    <h1>IT AUDIT</h1>
-                    <img src="../assets/Images/audit.jpeg" alt="IT Audit">
-                    <div class="description">
-                        <p>Don’t know how old your equipment is, whether it is under warranty, no longer supported or running optimally? Our IT Support Team can audit your equipment and give you a detailed idea of what you own, how old it is and what needs to be done to both secure and enhance your infrastructure.Your Server and personal computers are one of the most crucial parts of your business. When it's working correctly, you won't think about it. But as soon as it starts to run slow, introduce errors, or even stop working altogether, your business can grind to a halt.Far too many servers run on a wing and a prayer. Security vulnerabilities may be rife, old hardware threatens to pack it in, or legacy software may not be supported any longer.Your business runs on the back of its IT infrastructure.Let us review your systems through our comprehensive detailed IT Audit, and provide an expert, informed verdict on what can be improved, what must be changed or fixed immediately, and what is safe to leave for a time.</p>
-                    </div>
-                </div>
-
-                <div class="service">
-                    <h1>IT Equipment Repairs & Preventive Maintenance</h1>
-                    <img src="../assets/Images/maintanance and repairs.jpeg" alt="Maintenance and Repairs">
-                    <div class="description">
-                        <p>Whether on Contract or without contract with our clients, We offer repair services to IT equipment such as laptop screen replacement, upgrades of RAM, Harddisks, Printer repairs (HP, Kyocera, Epson) and provide Quarterly preventive maintenance services.</p>
-                    </div>
+            <div class="service">
+                <h1>IT AUDIT</h1>
+                <img src="../assets/Images/audit.jpeg" alt="IT Audit">
+                <div class="description">
+                    <p>Don’t know how old your equipment is, whether it is under warranty, no longer supported or running optimally? Our IT Support Team can audit your equipment and give you a detailed idea of what you own, how old it is and what needs to be done to both secure and enhance your infrastructure.Your Server and personal computers are one of the most crucial parts of your business. When it's working correctly, you won't think about it. But as soon as it starts to run slow, introduce errors, or even stop working altogether, your business can grind to a halt.Far too many servers run on a wing and a prayer. Security vulnerabilities may be rife, old hardware threatens to pack it in, or legacy software may not be supported any longer.Your business runs on the back of its IT infrastructure.Let us review your systems through our comprehensive detailed IT Audit, and provide an expert, informed verdict on what can be improved, what must be changed or fixed immediately, and what is safe to leave for a time.</p>
                 </div>
             </div>
-        </div>
+
+            <div class="service">
+                <h1>IT Equipment Repairs & Preventive Maintenance</h1>
+                <img src="../assets/Images/maintanance and repairs.jpeg" alt="Maintenance and Repairs">
+                <div class="description">
+                    <p>Whether on Contract or without contract with our clients, We offer repair services to IT equipment such as laptop screen replacement, upgrades of RAM, Harddisks, Printer repairs (HP, Kyocera, Epson) and provide Quarterly preventive maintenance services.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="../assets/JavaScript/nav.js"></script>
