--- a/index.html
+++ b/index.html
@@ -57,12 +57,19 @@
         <section class="Footer">
             <div class="footer_details container">
                 <div class="footer_wrapper">
+                    <h1>ICT Infrastructure Solutions Ltd.</h1>
+                    <div class="info">
+                        <img src="assets/Images/logo.png" alt="Logo">                        
+                    </div>                    
+                </div>
+                <div class="footer_wrapper">
                     <h1>Contacts</h1>
                     <div class="info">
                         <p><span class="icon icon-map-marker"</span> P.O BOX 31018 - 0060.</p>                
                         <p><span class="icon icon-map-marker"</span> Nairobi, Kenya.</p>
                         <p><span class="icon icon-phone"></span> Tel: 0720 987 281</p>
-                        <p><span class="icon icon-envelope"></span> info@ictinfrastructure.co.ke</p>
+                        <p><span class="icon icon-envelope"></span> info@ictinfrastructure.co.ke</p>  
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d249.29812975754618!2d36.83983256617201!3d-1.3134145340371997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x182f110731744dab%3A0xc8dc0df14ccaaa7c!2sICT%20Infrastructure%20Solutions%20LTD%2C%20Nairobi!3m2!1d-1.3134274!2d36.8398147!5e0!3m2!1sen!2ske!4v1671365329672!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                      
                     </div>                
                 </div>
                 <div class="footer_wrapper">
@@ -76,7 +83,7 @@
                     <p>&copy; 2022. ICT Infrastructure Solutions.</p>
                 </div> -->
             </div>
-            <p class="footer_p">All right reserved &copy; 2022. ICT Infrastructure Solutions.</p>
+            <p class="footer_p">All right reserved &copy;  ICT Infrastructure Solutions Limited  2010 - 2022</p>
         </section>
     </main>
 
