added the footer

--- a/src/about.html
+++ b/src/about.html
@@ -36,7 +36,7 @@
                     <p>To us, technology is not a product; it is a service that helps our customers capitalize on thetop tools to ensure productivity...reliability...and peace of mind in today’s work environment.Since its inception in November 2010, ICT Infrastructure Solutions LTD (ICTISL) has been driven by a goal to help customers work smarter. How? By creating a managed IT environment where leading technology resources and proactive management are availableand affordable for all organizations.</p>
                 </div>
                 <div class="about_image container">
-                    <img src="../assets/Images/Google map.jpeg" alt="Map Location">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d249.29812975754618!2d36.83983256617201!3d-1.3134145340371997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x182f110731744dab%3A0xc8dc0df14ccaaa7c!2sICT%20Infrastructure%20Solutions%20LTD%2C%20Nairobi!3m2!1d-1.3134274!2d36.8398147!5e0!3m2!1sen!2ske!4v1671365329672!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <div class="address">
                         <p><span class="icon icon-map-marker"</span> P.O BOX 31018 - 0060.</p>
                         <p><span class="icon icon-map-marker"</span> South-B Golden Gate, Kapiti rd, Along Mombasa Road.</p>
@@ -48,6 +48,38 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="Footer">
+            <div class="footer_details container">
+                <div class="footer_wrapper">
+                    <h1>ICT Infrastructure Solutions Ltd.</h1>
+                    <div class="info">
+                        <img src="../assets/Images/logo.png" alt="Logo">                        
+                    </div>                    
+                </div>
+                <div class="footer_wrapper">
+                    <h1>Contacts</h1>
+                    <div class="info">
+                        <p><span class="icon icon-map-marker"</span> P.O BOX 31018 - 0060.</p>                
+                        <p><span class="icon icon-map-marker"</span> Nairobi, Kenya.</p>
+                        <p><span class="icon icon-phone"></span> Tel: 0720 987 281</p>
+                        <p><span class="icon icon-envelope"></span> info@ictinfrastructure.co.ke</p>  
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d249.29812975754618!2d36.83983256617201!3d-1.3134145340371997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x182f110731744dab%3A0xc8dc0df14ccaaa7c!2sICT%20Infrastructure%20Solutions%20LTD%2C%20Nairobi!3m2!1d-1.3134274!2d36.8398147!5e0!3m2!1sen!2ske!4v1671365329672!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                      
+                    </div>                
+                </div>
+                <div class="footer_wrapper">
+                    <h1>Links</h1>
+                    <div class="info">
+                        <p><a href="src/about.html">About</a></p>
+                        <p><a href="src/services.html">Services</a></p>
+                    </div>
+                </div>
+                <!-- <div class="footer_wrapper logo">
+                    <p>&copy; 2022. ICT Infrastructure Solutions.</p>
+                </div> -->
+            </div>
+            <p class="footer_p">All right reserved &copy;  ICT Infrastructure Solutions Limited  2010 - 2022</p>
         </section>
     </main>
 
