--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/Styles/bootstrap.min.css">
     <link rel="stylesheet" href="assets/Styles/icomoon.css">
-    <link rel="stylesheet" href="assets/Styles/navbar.css">
     <link rel="stylesheet" href="assets/Styles/styles.css">    
     <title>Home</title>
 </head>
 <body>
-    <nav class="nav_bar">
-        <div class="logo">
-            <h1>ICT SOLUTIONS</h1>
-        </div>
-        <ul class="nav_links">
-            <li><a href="#">Home</a></li>
-            <li><a href="src/about.html">About</a></li>
-            <li><a href="src/services.html">Services</a></li>
-        </ul>
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-    </nav>
+    <header class="nav_wrapper">
+        <nav class="nav_bar">
+            <div class="logo">
+                <h1>ICT SOLUTIONS</h1>
+            </div>
+            <ul class="nav_links">
+                <li><a href="#">Home</a></li>
+                <li><a href="src/about.html">About</a></li>
+                <li><a href="src/services.html">Services</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
+    </header>
     <main>
         <section class="Hero">
             <div class="hero_text">
@@ -64,7 +65,7 @@
                 </div>
                 <div class="footer_wrapper">
                     <h1>Contacts</h1>
-                    <div class="info">
+                    <div class="info handles">
                         <p><span class="icon icon-map-marker"</span> P.O BOX 31018 - 0060.</p>                
                         <p><span class="icon icon-map-marker"</span> Nairobi, Kenya.</p>
                         <p><span class="icon icon-phone"></span> Tel: 0720 987 281</p>
