shifted to React

--- a/index.html
+++ b/index.html
@@ -1,93 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <!-- <meta http-equiv="refresh" content="1"> -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/Styles/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/Styles/icomoon.css">
-    <link rel="stylesheet" href="assets/Styles/styles.css">    
-    <title>Home</title>
-</head>
-<body>
-    <header class="nav_wrapper">
-        <nav class="nav_bar">
-            <div class="logo">
-                <h1>ICT SOLUTIONS</h1>
-            </div>
-            <ul class="nav_links">
-                <li><a href="#">Home</a></li>
-                <li><a href="src/about.html">About</a></li>
-                <li><a href="src/services.html">Services</a></li>
-            </ul>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <section class="Hero">
-            <div class="hero_text">
-                <h1>Here to <span>Help</span> you <span>With</span> your <span>Tech ...</span></h1>                
-            </div>
-            <div class="hero_image">
-                <img src="assets/Images/data_center.jpg" alt="Server with Cables" />
-            </div>
-        </section>
-
-        <section class="Home_about">            
-            <div class="container about_text">
-                <p>Our IT solutions help organisations achieve efficiency through secure platforms and strategic technology decisions.</p>
-                <p>We strive to provide the best level of service, support and care that is possible in the IT industry.ICT INFRASTRUCTURE SOLUTIONS LIMITED service agreements are no lock in - a reflection of the fact that we know you will love our level of service and price point.</p>
-                <p>We specialise in Cloud platforms Microsoft 365, Google, AWS, Zoho. Backup & Disaster Recovery, Microsoft Exchange Online, Microsoft Azure, Dedicated Private Cloud services, hardware and software supplies and installations, Server Monitoring, CCTV Surveillance, Conference System, Access Control, Data Centre, Network LAN/WAN cabling, Optical Fiber and IT Consulting.</p>
-            </div>
-            <div class="about_images">
-                <ul class="list-unstyled">
-                    <li><img src="assets/Images/Logitech.png" alt="Logitech"></li>
-                    <li><img src="assets/Images/Hiki vision.png" alt="Hikivision"></li>
-                    <li><img src="assets/Images/Home_ms.jpg" alt="Home MS Services"></li>
-                    <li><img src="assets/Images/zoho.jpg" alt="Zoho"></li>
-                    <li><img src="assets/Images/Homepage_cloud.jpg" alt="Homepage Cloud"></li>
-                </ul>
-            </div>
-        </section>
-
-        <section class="Footer">
-            <div class="footer_details container">
-                <div class="footer_wrapper">
-                    <h1>ICT Infrastructure Solutions Ltd.</h1>
-                    <div class="info">
-                        <img src="assets/Images/logo.png" alt="Logo">                        
-                    </div>                    
-                </div>
-                <div class="footer_wrapper">
-                    <h1>Contacts</h1>
-                    <div class="info handles">
-                        <p><span class="icon icon-map-marker"</span> P.O BOX 31018 - 0060.</p>                
-                        <p><span class="icon icon-map-marker"</span> Nairobi, Kenya.</p>
-                        <p><span class="icon icon-phone"></span> Tel: 0720 987 281</p>
-                        <p><span class="icon icon-envelope"></span> info@ictinfrastructure.co.ke</p>  
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d249.29812975754618!2d36.83983256617201!3d-1.3134145340371997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x182f110731744dab%3A0xc8dc0df14ccaaa7c!2sICT%20Infrastructure%20Solutions%20LTD%2C%20Nairobi!3m2!1d-1.3134274!2d36.8398147!5e0!3m2!1sen!2ske!4v1671365329672!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                      
-                    </div>                
-                </div>
-                <div class="footer_wrapper">
-                    <h1>Links</h1>
-                    <div class="info">
-                        <p><a href="src/about.html">About</a></p>
-                        <p><a href="src/services.html">Services</a></p>
-                    </div>
-                </div>
-                <!-- <div class="footer_wrapper logo">
-                    <p>&copy; 2022. ICT Infrastructure Solutions.</p>
-                </div> -->
-            </div>
-            <p class="footer_p">All right reserved &copy;  ICT Infrastructure Solutions Limited  2010 - 2022</p>
-        </section>
-    </main>
-
-    <script src="assets/JavaScript/nav.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ICT Infrastructure Solutions</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
